--- a/src/main.scss
+++ b/src/main.scss
@@ -1,9 +1,12 @@
 *,
 *::before,
 *::after {
+   margin: 0;
+   padding: 0;
    box-sizing: border-box;
+   font-family: 'Montserrat', sans-serif;
 }
 
 body {
-   background-color: #000;
+   background-color: #eee;
 }
