--- a/src/components/UI/Button/Button.scss
+++ b/src/components/UI/Button/Button.scss
@@ -1,26 +1,27 @@
+.button {
+   width: 153px;
+   height: 50px;
+   border-radius: 60px;
+   border: none;
+   color: #eee;
+   cursor: pointer;
+   opacity: 0.85;
+   transition: opacity 0.1s;
+}
+
+button:hover {
+   opacity: 1;
+}
+
 .button__save {
    position: absolute;
    top: 39px;
    right: 132px;
-   width: 153px;
-   height: 50px;
-   border-radius: 60px;
    background-color: #f2b233;
-   color: #eee;
-   border: none;
-   cursor: pointer;
-   outline: none;
    font-size: 24px;
 }
 
 .button__price {
    background-color: #04af76;
-   width: 153px;
-   height: 50px;
-   border-radius: 60px;
-   color: #eee;
-   border: none;
-   cursor: pointer;
-   outline: none;
    font-size: 20px;
 }
